@@ -55,6 +55,9 @@ Where "NUMBER" is the bug number.
    specific "Second choice" nickname.
  - Auto detect RusNet and use /NICKSERV to identify instead of /MSG.
  - Added /Ghost command.
+ - Fixed: The WHOIS away-line ignored irc_whois_front setting.
+ - Scroll-wheel now works while hovering over a tab (Khisanth).
+ - Added support for Italic text (ctrl-shift-1d).
  - 
 
 
